# advanced_grasping_tutorials

./: README.md
advanced_grasping_tutorials/: CMakeLists.txt  advanced_grasping_example_plugin_description.xml  package.xml
advanced_grasping_tutorials/config/: example_server_config.yaml
advanced_grasping_tutorials/config/bt/: example_tree.xml
advanced_grasping_tutorials/config/grasp_generation/: moveit_grasps_data_pal-gripper.yaml  moveit_grasps_data_robotiq-2f-140.yaml  moveit_grasps_data_robotiq-2f-85.yaml  moveit_grasps_data_robotiq-epick.yaml  moveit_grasps_generator_config.yaml
advanced_grasping_tutorials/config/perception/: object_detection_params.yaml  object_histogram_params.yaml  plane_segmentation_params.yaml
advanced_grasping_tutorials/include/advanced_grasping_tutorials/: example_plugin.h
advanced_grasping_tutorials/launch/: advanced_grasping.launch
advanced_grasping_tutorials/scripts/: example_demo.py
advanced_grasping_tutorials/src/: example_plugin.cpp
advanced_grasping_tutorials_nodes/: CMakeLists.txt  package.xml
advanced_grasping_tutorials_nodes/include/advanced_grasping_tutorials_nodes/: offerGripper.h
advanced_grasping_tutorials_nodes/src/: behaviortree_register_example_plugins.cpp  offerGripper.cpp
